# context-is-key-forecasting-test

./: .gitignore  calculate_mape.py  cc-gpt4o-ctx_c1.json  dev.yml  pyproject.toml  run_baselines.py
cik_benchmark/: __init__.py  evaluation.py
cik_benchmark/baselines/: direct_prompt.py
cik_benchmark/metrics/: crps.py  roi_metric.py  scaling_cache.py
cik_benchmark/tasks/: gmv_tasks.py
