[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cik-benchmark"
description = "Context is Key: A Benchmark for Forecasting with Essential Textual Information"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
version = "1.0"

authors = [
    {name = "Andrew Robert Williams"},
    {name = "Arjun Ashok"},
    {name = "Étienne Marcotte"},
    {name = "Valentina Zantedeschi"},
    {name = "Jithendaraa Subramanian"},
    {name = "Roland Riachi"},
    {name = "James Requeima"},
    {name = "Alexandre Lacoste"},
    {name = "Irina Rish"},
    {name = "Nicolas Chapados"},
    {name = "Alexandre Drouin"},
]
maintainers = [
    {name = "Andrew Robert Williams", email = "andrew.williams1@servicenow.com"},
    {name = "Arjun Ashok", email = "arjun.ashok@servicenow.com"},
    {name = "Alexandre Drouin", email = "alexandre@servicenow.com"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "causalchamber==0.1.1",
    "chronos-forecasting",
    "datasets>=2.17.1",
    "gluonts[torch]>=0.14.4",
    "gradio>=5.9.1",
    "h5py>=3.12.1",
    "huggingface-hub>=0.27.0",
    "lag-llama",
    "llm-processes",
    "lm-format-enforcer>=0.10.9",
    "nixtla>=0.6.4",
    "numpy>=1.26.4",
    "openai>=1.58.1",
    "pandas>=2.1.4",
    "sentencepiece>=0.2.0",
    "statsmodels>=0.14.4",
    "tactis",
    "tenacity>=9.0.0",
    "termcolor>=2.5.0",
    "timellm",
    "transformers>4.4.1",
    "uni2ts[notebook]",
    "unitime",
]

[project.urls]
homepage = "https://github.com/ServiceNow/context-is-key-forecasting/"

[tool.setuptools]
packages = { find = { where = ["."] } }
include-package-data = true

[tool.setuptools.package-data]
"benchmark.data.dominicks" = ["*.json"]

[tool.setuptools.dynamic]
version = {attr = "cik_benchmark.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }, r = { file = ["requirements-r.txt"] }}

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.uv.sources]
tactis = { git = "https://github.com/ServiceNow/TACTiS.git", rev = "tactis-2" }
lag-llama = { git = "https://github.com/time-series-foundation-models/lag-llama.git", rev = "main" }
llm-processes = { git = "https://github.com/aldro61/llm_processes.git", rev = "master" }
chronos-forecasting = { git = "https://github.com/amazon-science/chronos-forecasting.git", rev = "main" }
uni2ts = { git = "https://github.com/SalesforceAIResearch/uni2ts.git" }
timellm = { git = "https://github.com/AndrewRWilliams/TimeLLMBaseline.git" }
unitime = { git = "https://github.com/AndrewRWilliams/UniTimeBaseline.git" }
